jdk8 adjustments