@@ -4,15 +4,16 @@ import org.assertj.core.api.InstanceOfAssertFactories;
 import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
-import java.util.Set;
+import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
 class DlxTest {
     @Test
     void matrixFromFigure3ofPaper_solvedCorrectly() {
-        Dlx<String> dlx = new Dlx<>(7, Set.of(), -1, 1, 10, false, Integer.MAX_VALUE);
+        Dlx<String> dlx = new Dlx<>(7, Collections.emptySet(), -1, 1, 10, false, Integer.MAX_VALUE);
         dlx.addChoice("C E F", listOf(2, 4, 5));
         dlx.addChoice("A D G", listOf(0, 3, 6));
         dlx.addChoice("B C F", listOf(1, 2, 5));
@@ -30,7 +31,7 @@ class DlxTest {
 
     @Test
     void matrixWithSecondaryConstraint_constraintNotFulfillable_solvedCorrectly() {
-        Dlx<String> dlx = new Dlx<>(8, Set.of(7), -1, 1, 10, false, Integer.MAX_VALUE);
+        Dlx<String> dlx = new Dlx<>(8, Collections.singleton(7), -1, 1, 10, false, Integer.MAX_VALUE);
         dlx.addChoice("C E F", listOf(2, 4, 5));
         dlx.addChoice("A D G H", listOf(0, 3, 6, 7));
         dlx.addChoice("B C F", listOf(1, 2, 5));
@@ -48,7 +49,7 @@ class DlxTest {
 
     @Test
     void matrixWithSecondaryConstraint_constraintFulfillable_solvedCorrectly() {
-        Dlx<String> dlx = new Dlx<>(8, Set.of(7), -1, 1, 10, false, Integer.MAX_VALUE);
+        Dlx<String> dlx = new Dlx<>(8, Collections.singleton(7), -1, 1, 10, false, Integer.MAX_VALUE);
         dlx.addChoice("C E F", listOf(2, 4, 5));
         dlx.addChoice("A D G", listOf(0, 3, 6));
         dlx.addChoice("B C F", listOf(1, 2, 5));
